always show mook portrait and fix alignment

--- a/main.css
+++ b/main.css
@@ -1343,7 +1343,7 @@ button,
   display: grid;
   grid-template-areas: "mook-image-toggle mook-image-block";
   width: 168px;
-  height: 151px;
+  height: 155px;
 }
 .mook-sheet .mook-image-small-toggle {
   width: 17px;
@@ -1357,12 +1357,12 @@ button,
 .mook-sheet .mook-image-block {
   grid-area: "mook-image-block";
   clip-path: polygon(25px 0, 100% 0, 100% 100%, 0 100%, 0 25px);
-  height: 151px;
+  height: 155;
   width: 151px;
 }
 .mook-sheet .mook-image-block-img {
   width: 151px;
-  height: 151px;
+  height: 155;
   object-fit: contain;
   border: 0;
 }
